# flappy-dragon

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs  obstacle.rs  player.rs  state.rs
